--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="main">
-        <div id="loader">
-            <div id="topheading">
-                <h5>Design Portfolio</h5>
-                <h5>&copy; 2024</h5>
-            </div>
+      <div id="loader">
+        <div id="topheading">
+          <h5 class="reveal">Design Portfolio</h5>
+          <h5 class="reveal">&copy; 2024</h5>
         </div>
-        <div id="green"></div>
-        <div id="white"></div>
+        <h1 class="reveal">
+          <span>Shayan</span>
+          <span>Azfar</span>
+          <span>is</span>
+          <span>a</span>
+        </h1>
+      </div>
+      <div id="green"></div>
+      <div id="white"></div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
+
     <script src="script.js" defer></script>
-</body>
+  </body>
 </html>
